# university-homeworks

./: README.md  as.txt  asd.txt  output.txt
algorithms-and-data-structures/: CMakeLists.txt
algorithms-and-data-structures/1/: A  A.cpp
algorithms-and-data-structures/10/: A.cpp
algorithms-and-data-structures/2/: A.cpp
algorithms-and-data-structures/3/: A.cpp  B.cpp  C.cpp  D.cpp
algorithms-and-data-structures/6/: A.cpp  C.cpp  D.cpp
algorithms-and-data-structures/7/: A.cpp  C.cpp
algorithms-and-data-structures/9/: A.cpp  E.cpp  F.cpp  G.cpp
algorithms-and-data-structures/ha-2(python)/: B.py  D.py
algorithms-and-data-structures/ha-3(python)/: B.py  C.py
algorithms-and-data-structures/python/ha-1/: C.py  E.py  F.py  H.py
algorithms-and-data-structures/python/ha-2/: A.py  C.py  F.py  G.py
algorithms-and-data-structures/python/ha-3/: A.py  G.py  H.py
caos/caos-master/: CMakeLists.txt  README.md
caos/caos-master/10/: 1.cpp  2.S  2_test.c  4.S  4_test.c  5.S
caos/caos-master/11/: 1.S  3.c  4.c
caos/caos-master/12/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/12_ht/: 1_asm.S  1_checker.c
caos/caos-master/13/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/14/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/15/: 1.c  2.c  3.c  5.c
caos/caos-master/16/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/17/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/18/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/19/: 1.c  2.c  3.c  4.c  5.c
caos/caos-master/2/: 1.c  2.c  2_1.c  3.c  4.c
caos/caos-master/20/: 1.c  3.c  4.c
caos/caos-master/21/: 1.c  2.c  3.c
(+754 files in other folders)
