cmake_minimum_required(VERSION 3.20)
project(algorithms_and_data_structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithms_and_data_structures
        1/A.cpp
        1/B.cpp
        1/C.cpp
        1/D.cpp
        1/E.cpp
        2/A.cpp
        2/B.cpp
        2/C.cpp
        2/D.cpp
        2/E.cpp)
